buildscript {
    ext {
        springBootVersion = '3.5.5'
    }
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'com.figaf.training'
version = '1.0-SNAPSHOT'

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://jitpack.io" }
}

ext {
    cpiApiVersion = '3.13'
    mapStructVersion = "1.6.0"
    lombokVersion = "1.18.38"
}

dependencies {
    implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation "com.github.figaf:cpi-api:${cpiApiVersion}"
    implementation 'org.liquibase:liquibase-core'
    runtimeOnly 'com.mysql:mysql-connector-j'


    // lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // mapstruct
    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

bootJar {
    manifest {
        attributes 'Main-Class': 'org.springframework.boot.loader.launch.PropertiesLauncher'
        attributes 'Start-Class': 'com.figaf.training.cpisync.Application'
        attributes 'Implementation-Version': version
    }
}

springBoot {
    mainClass = 'com.figaf.training.cpisync.Application'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
